Working fairly well with my librequest library and nlohmann json.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required(VERSION 3.23)
 project(jellyfin)
 
-set(CMAKE_CXX_STANDARD 98)
+set(CMAKE_CXX_STANDARD 11)
 
-add_library(jellyfin SHARED src/main/library.cpp)
+add_library(jellyfin SHARED src/main/SimpleApi.cpp src/main/SimpleApi.h src/main/Conf.h src/main/Structures.h)
 add_executable(test src/test/main.cpp)
 
-include_directories(lib/librequest)
+add_subdirectory(lib/librequest)
+
+include_directories(lib/ ${LIBREQ_HEADERS})
 
 include_directories(src/main)
 
